--- a/rod.html
+++ b/rod.html
@@ -98,7 +98,7 @@ j<!DOCTYPE html>
 <section id="about">
     <h2>About Me</h2>
     <p>Hi, I'm Rodnie Turay, a professional web developer with a passion for creating stunning websites.</p>
-    <img src="profile.jpg" alt="John Doe" style="width:150px; border-radius: 50%;">
+    <img src="profile.jpg" alt="rod" style="width:150px; border-radius: 50%;">
     <p>I specialize in creating responsive, user-friendly websites that help businesses grow online.</p>
 </section>
 
