--- a/rod.html
+++ b/rod.html
@@ -1,4 +1,4 @@
-j<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@ j<!DOCTYPE html>
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            background-color: creamy-white;
         }
         header {
             background-color: #333;
